# vuanem-caresoft

./: .gitignore  Pipfile  README.md  broadcast.py  components.py  config.py  main.py  models.old.py  models.py  pg_models.py  pipelines.py  pyproject.toml  pytest.ini  requirements.txt  tasks.py  xcomponents.py  xmodels.py
.dbt/: .gitignore  dbt_project.yml
caresoft/: caresoft_controller.py  caresoft_service.py  repo.py  request_parser.py
components/: getter.py  loader.py  utils.py
configs/: Agents.json  Calls.json  Contacts.json  ContactsDetails.json  DeletedContacts.json  DeletedTickets.json  Groups.json  Services.json  Tickets.json  TicketsCustomFields.json  TicketsDetails.json
controller/: orchestrator.py  pipelines.py  tasks.py  utils.py
dataflow/: .gcloudignore  Dockerfile  main.py  metadata.json  pyproject.toml  setup.py
dataflow/caresoft/: repo.py  request_parser.py
dataflow/caresoft/pipeline/: agents.py  calls.py  contacts.py  contacts_custom_fields.py  contacts_details.py  groups.py  interface.py  services.py  tickets.py  tickets_custom_fields.py  tickets_details.py
dataflow/secret_manager/: __init__.py
dataflow/tasks/: tasks_service.py
db/: bigquery.py
libs/: bigquery.py  caresoft.py  tasks.py  utils.py
models/: Agents.py  Calls.py  Contacts.py  ContactsCustomFields.py  ContactsDetails.py  DeletedContacts.py  DeletedTickets.py  Groups.py  Services.py  Tickets.py  TicketsCustomFields.py  TicketsDetails.py  base.py  models.py
samples/: Agents.json  Calls.json  Contacts.json  ContactsCustomFields.json  ContactsDetails.json  Groups.json  TicketCustomFields.json  Tickets.json  TicketsDetails.json  calllogs.json  services.json
schemas/: Calls.json  Contacts.json  ContactsDetails.json  Tickets.json  TicketsDetails.json
tasks/: cloud_tasks.py  tasks_service.py
templates/: read_detail_ids.sql.j2  read_max_incremental.sql.j2  update_from_raw.sql.j2  update_from_stage.sql.j2
test/: test_auto.py  test_broadcast.py  test_details.py  test_incremental.py  test_manual.py  test_static.py  test_units.py  utils.py
tests/: test_units.py  utils.py
(+34 files in other folders)
