[tool.poetry]
name = "vuanem-caresoft"
version = "3.0"
description = ""
authors = ["HM <hieumdd@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
requests = "^2.26.0"
aiohttp = "^3.7.4"
google-cloud-bigquery = "^2.27.1"
google-cloud-tasks = "^2.5.2"
asyncio-throttle = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-timeout = "^1.4.2"
black = "^21.9b0"
mypy = "^0.910"
types-requests = "^2.26.0"
types-protobuf = "^3.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-p no:warnings -s --durations=0"
testpaths = [
    "test",
]
# timeout = 530
