[tool.poetry]
name = "vuanem-caresoft-dataflow"
version = "1.0"
description = ""
authors = ["HM <hieumdd@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
asyncio-throttle = "^1.0.2"
httpx = "^0.22.0"
apache-beam = {version = "2.38.0", extras = ["gcp"]}
google-cloud-tasks = "^2.9.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^22.3.0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-s --durations=0"
testpaths = [
    "test",
]

[tool.mypy]
python_version = 3.9
ignore_missing_imports = true
namespace_packages = true
